hphp/test/zend/bad/ext-spl/SplFixedArray_offsetGet_invalid_parameter.php
<?php
$array = new SplFixedArray(5);
$array[0] = 'a';
$a = $array->offsetGet();
if(is_null($a)) {
	echo 'PASS';
}
?>